syntax = "proto3";

option php_namespace = "App\\Protobuff";
option php_metadata_namespace = "App\\GPBMetadata";

import "entityPb.proto";
import "summaryPb.proto";
import "customerPb.proto";
import "timePb.proto";

message PushNotificationPb {
    EntityPb dbInfo = 1;
    CustomerPbRef customerRef = 2;
    string token = 3;
    TimePb time = 4;
}

message PushNotificationPbRef {
    string id = 1;
}

message SendPushNotificationPb {
    string registrationId = 1;
    repeated string registrationIds = 2;
    SendNotificationTypeEnum sendType = 3;
    string subject = 4;
    string body = 5;
    string imageUrl = 6;
}

enum SendNotificationTypeEnum {
    UNKNOWN_TYPE = 0;
    SINGLE = 1;
    MULTIPLE = 2;
}

message PushNotificationSearchRequestPb {
    string customerRefId = 1;

}
message PushNotificationSearchResponsePb {
    SummaryPb summary = 1;
    repeated PushNotificationPb results = 2;
}



